new offers link HS

--- a/corporate/index.html
+++ b/corporate/index.html
@@ -178,8 +178,8 @@
                 <ul>
                     <li><a href="/carrieres" data-di-id="di-id-b3466be4-717df641">Philosophie</a></li>
                     <li><a href="/carrieres/evolutions" data-di-id="di-id-b3466be4-d58e93c0">Évolutions</a></li>
-                    <li><a href="/probleme-technique" data-di-id="di-id-f54e1688-cdafd9e9">Offres d'emploi</a></li>
-                    <li><a href="/probleme-technique" data-di-id="di-id-58f0f128-965ac891">Candidature spontanée</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/" data-di-id="di-id-f54e1688-cdafd9e9">Offres d'emploi</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/candidature-spontanee" data-di-id="di-id-58f0f128-965ac891">Candidature spontanée</a></li>
                 </ul>
             </section>
             <span class="separate"></span>
