--- a/carrieres/index.html
+++ b/carrieres/index.html
@@ -195,8 +195,8 @@
                 <ul>
                     <li class="active"><a href="/carrieres" data-di-id="di-id-4737e740-5ec1f02">Philosophie</a></li>
                     <li><a href="/carrieres/evolutions" data-di-id="di-id-8a424fe8-607cc83">Évolutions</a></li>
-                    <li><a href="/probleme-technique" data-di-id="di-id-72e89041-cc0d8c7d">Offres d'emploi</a></li>
-                    <li><a href="/probleme-technique" data-di-id="di-id-136fa392-170d082c">Candidature Spontanée</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr" data-di-id="di-id-72e89041-cc0d8c7d">Offres d'emploi</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/candidature-spontanee" data-di-id="di-id-136fa392-170d082c">Candidature Spontanée</a></li>
                 </ul>
             </nav>
             <ul class="right-nav menu-header-right-menu" id="menu-header-right-menu">
@@ -231,8 +231,8 @@
                 <ul>
                     <li class="active"><a href="/carrieres" data-di-id="di-id-b3466be4-717df641">Philosophie</a></li>
                     <li><a href="/carrieres/evolutions" data-di-id="di-id-b3466be4-d58e93c0">Évolutions</a></li>
-                    <li><a href="/probleme-technique" data-di-id="di-id-f54e1688-cdafd9e9">Offres d'emploi</a></li>
-                    <li><a href="/probleme-technique" data-di-id="di-id-58f0f128-965ac891">Candidature spontanée</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/" data-di-id="di-id-f54e1688-cdafd9e9">Offres d'emploi</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/candidature-spontanee" data-di-id="di-id-58f0f128-965ac891">Candidature spontanée</a></li>
                 </ul>
             </section>
             <span class="separate"></span>
@@ -304,7 +304,7 @@
                                                 <p></p>
                                             </div>
                                             <div class="cta-r blueDark cta-back">
-                                                <a href="/probleme-technique" data-di-id="di-id-d219b821-5afced40">Découvrir nos offres</a>
+                                                <a href="https://groupe-assu2000.human-sourcing.com/fr/" data-di-id="di-id-d219b821-5afced40">Découvrir nos offres</a>
                                             </div>
                                         </div>
                                     </article>
