--- a/probleme-technique/index.html
+++ b/probleme-technique/index.html
@@ -190,8 +190,8 @@
                 <ul>
                     <li><a href="/carrieres">Philosophie</a></li>
                     <li><a href="/carrieres/evolutions">Évolutions</a></li>
-                    <li><a href="/probleme-technique">Offres d'emploi</a></li>
-                    <li><a href="/probleme-technique">Candidature spontanée</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/">Offres d'emploi</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/candidature-spontanee">Candidature spontanée</a></li>
                 </ul>
             </section>
             <span class="separate"></span>
