direct link to announces HS page filter

--- a/carrieres/evolutions/index.html
+++ b/carrieres/evolutions/index.html
@@ -158,7 +158,7 @@
                 <ul>
                     <li><a href="/carrieres" data-di-id="di-id-4737e740-5ec1f02">Philosophie</a></li>
                     <li class="active"><a href="/carrieres/evolutions" data-di-id="di-id-8a424fe8-607cc83">Évolutions</a></li>
-                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/" data-di-id="di-id-72e89041-cc0d8c7d">Offres d'emploi</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/offres-emploi" data-di-id="di-id-72e89041-cc0d8c7d">Offres d'emploi</a></li>
                     <li><a href="https://groupe-assu2000.human-sourcing.com/fr/candidature-spontanee" data-di-id="di-id-136fa392-170d082c">Candidature Spontanée</a></li>
                 </ul>
             </nav>
