--- a/carrieres/index.html
+++ b/carrieres/index.html
@@ -231,7 +231,7 @@
                 <ul>
                     <li class="active"><a href="/carrieres" data-di-id="di-id-b3466be4-717df641">Philosophie</a></li>
                     <li><a href="/carrieres/evolutions" data-di-id="di-id-b3466be4-d58e93c0">Évolutions</a></li>
-                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/" data-di-id="di-id-f54e1688-cdafd9e9">Offres d'emploi</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/offres-emploi" data-di-id="di-id-f54e1688-cdafd9e9">Offres d'emploi</a></li>
                     <li><a href="https://groupe-assu2000.human-sourcing.com/fr/candidature-spontanee" data-di-id="di-id-58f0f128-965ac891">Candidature spontanée</a></li>
                 </ul>
             </section>
@@ -304,7 +304,7 @@
                                                 <p></p>
                                             </div>
                                             <div class="cta-r blueDark cta-back">
-                                                <a href="https://groupe-assu2000.human-sourcing.com/fr/" data-di-id="di-id-d219b821-5afced40">Découvrir nos offres</a>
+                                                <a href="https://groupe-assu2000.human-sourcing.com/fr/offres-emploi" data-di-id="di-id-d219b821-5afced40">Découvrir nos offres</a>
                                             </div>
                                         </div>
                                     </article>
