--- a/mentions-legales/index.html
+++ b/mentions-legales/index.html
@@ -190,7 +190,7 @@
                 <ul>
                     <li><a href="/carrieres">Philosophie</a></li>
                     <li><a href="/carrieres/evolutions">Évolutions</a></li>
-                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/">Offres d'emploi</a></li>
+                    <li><a href="https://groupe-assu2000.human-sourcing.com/fr/offres-emploi">Offres d'emploi</a></li>
                     <li><a href="https://groupe-assu2000.human-sourcing.com/fr/candidature-spontanee">Candidature spontanée</a></li>
                 </ul>
             </section>
